# mandelbulb-opengl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: main.cpp
src/shaders/: fragment.fs  vertex.vs
src/utils/: draw_shapes.h  shader.h
